service for the android

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:layout_height="0dp"
         android:layout_marginBottom="143dp"
         android:layout_marginTop="127dp"
+        android:onClick="startService"
         android:text="@string/start_service"
-        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/stopBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +25,7 @@
         android:layout_width="169dp"
         android:layout_height="0dp"
         android:layout_marginBottom="150dp"
+        android:onClick="stopService"
         android:text="@string/stop_service"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
